@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11382 2005/10/09 10:30:48 jmmv Exp $
+$NetBSD: CHANGES,v 1.11383 2005/10/09 10:44:41 abs Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4353,3 +4353,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated databases/php-dbx 1.1.0 [jdolecek 2005-10-09]
 	Added net/php-xmlrpc 5.0.5 [jdolecek 2005-10-08]
 	Updated pkgtools/verifypc to 1.3 [jmmv 2005-10-09]
+	Updated mail/exim to 4.54 [abs 2005-10-09]
